--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,14 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "CV"
+    url: /files/CV_ii kvani_2024.pdf
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
   - title: "Portfolio"
-    url: /portfolio/
-        
+    url: /portfolio/    
+
   - title: "Blog Posts"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  
+  - title: "Publications"
+    url: https://scholar.google.com/citations?user=GqCZ-0QAAAAJ
+        
