--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "realivanivani/realivanivani.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "slisa_s_sesirom.jpeg"
   name             : "Ivan Ivani, PhD."
   bio              : "Data Scientist with an academic background in bioinformatics/structural biology and international experience in different sectors"
   location         : "Novi Sad, Serbia"
