--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "slisa_s_sesirom.jpeg"
   name             : "Ivan Ivani, PhD."
-  bio              : "Data Scientist with an academic background in bioinformatics/structural biology and international experience in different sectors"
+  bio              : "Data Scientist with a PhD in Bioinformatics and a lot of life experience"
   location         : "Novi Sad, Serbia"
   employer         : "Continental UX"
   uri              : # URL
