--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /files/CV_ii kvani_2024.pdf
+    url: /files/Resume_IvanIvani_2024.pdf
 
   - title: "Portfolio"
     url: /portfolio/    
