--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,4 +13,4 @@ main:
     url: https://scholar.google.com/citations?user=GqCZ-0QAAAAJ
         
   - title: "Resume"
-    url: /files/Resume_IvanIvani_2024.pdf
+    url: /files/Resume_IvanIvani%20_2024.pdf
