--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "slika_s_papagajom2.jpeg"
   name             : "Ivan Ivani, PhD."
-  bio              : "Data Scientist full of life experiences"
+  bio              : "Data Scientist with a lot on his mind"
   location         : "Novi Sad, Serbia"
   employer         : "Continental UX"
   uri              : # URL
