--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,5 @@ main:
   - title: "Publications"
     url: https://scholar.google.com/citations?user=GqCZ-0QAAAAJ
         
-  - title: "Resume.pdf"
+  - title: "Download my CV"
     url: /files/Resume_IvanIvani%20_2024.pdf
