--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Ivan Ivani, PhD."
   bio              : "Data Scientist with a lot on his mind"
   location         : "Novi Sad, Serbia"
-  employer         : "Continental UX"
+  employer         : "Continental Automotive"
   uri              : # URL
   email            : "jasamivanivani@gmail.com" 
 
