--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ author:
   # Biographic information
   avatar           : "slika_s_papagajom2.jpeg"
   name             : "Ivan Ivani, PhD."
-  bio              : "Data Scientist with a lot on his mind"
+  bio              : "Data Scientist"
   location         : "Novi Sad, Serbia"
-  employer         : "Continental Automotive"
+  employer         : "Continental"
   uri              : # URL
   email            : "jasamivanivani@gmail.com" 
 
