update of cv file

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-# main links links
+files/CV - Ivan Ivani - 2025.pdf# main links links
 main:
   - title: "Resume"
     url: /cv/
@@ -13,4 +13,4 @@ main:
     url: https://scholar.google.com/citations?user=GqCZ-0QAAAAJ
         
   - title: "Download my CV"
-    url: /files/Resume_IvanIvani%20_2024.pdf
+    url: /files/CV - Ivan Ivani - 2025.pdf
