Update author bio and employer in config

--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ author:
   # Biographic information
   avatar           : "slika_s_papagajom2.jpeg"
   name             : "Ivan Ivani, PhD."
-  bio              : "Data Scientist"
+  bio              : "Data Analytics Engineer"
   location         : # "Novi Sad, Serbia"
-  employer         : "Continental"
+  employer         : "Consultant"
   uri              : # URL
   email            : "jasamivanivani@gmail.com" 
 
