Update CV download link to PDF format

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,4 +12,4 @@ main:
     url: https://scholar.google.com/citations?user=GqCZ-0QAAAAJ
         
   - title: "Download my CV"
-    url: /files/CV_IvanIvani_2025_dsl.docx
+    url: /files/CV%20-%20Ivan%20Ivani%20-%202025.pdf
